# CSOT-LowLatencyTrack-Week1

./: .gitignore  CMakeLists.txt  README.md  build_release.sh  submission.sh
bench/: bench.cpp
data/: synthetic_small.csv
include/: engine.hpp
src/: engine.cpp  main.cpp
strategies/: null_strategy.cpp  spec_strategy.cpp
